--- a/hugo.yaml
+++ b/hugo.yaml
@@ -5,15 +5,13 @@ params:
     enabled: true
     title: "Yuma Ishikawa"
     subtitle: "This is subtitle"
-    imageUrl: "./data/me.jpeg"
+    imageUrl: https://raw.githubusercontent.com/yumafuu/yumafuu.github.io/master/data/me.jpeg
     imageTitle: "me"
-    imageWidth: 120
-    imageHeight: 120
+    imageWidth: 140
+    imageHeight: 140
     buttons:
       - name: Archive
         url: "/archive"
-      - name: Github
-        url: "https://github.com/"
 
   # homeInfoParams:
   #   enabled: false
@@ -21,10 +19,10 @@ params:
   #   Content: Can be Info, links, about...
 
   socialIcons:
-    - name: "x"
-      url: "https://x.com/yuma_katameoome"
     - name: "github"
       url: "https://github.com/yumafuu"
+    - name: "x"
+      url: "https://x.com/yuma_katameoome"
     - name: "facebook"
       url: "https://www.facebook.com/yuma.ishikawa.5"
     - name: "zenn"
