--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -7,4 +7,4 @@ custom_css:
 ############################
 
 enableEmoji: true
-disableKinds: ['taxonomy', 'term']
+# disableKinds: ['taxonomy', 'term']
